# wholly-absorbed

./: .gitignore  CHANGELOG.md  Makefile  Procfile  README.md  TODO.md  default.nix  hie.yaml  rapt.cabal  rapt.nix  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
docs/: Design.md
src/: Api.hs  App.hs  Models.hs
static/: index.html
test/: AppSpec.hs
