cabal-version:       3.0
-- Initial package description 'rapt.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                rapt
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Joaquin Florius
maintainer:          j@florius.com.ar
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

common common-options
  default-language:   Haskell2010
  ghc-options:        -Wall
  default-extensions: OverloadedStrings
  build-depends:      base >=4.13 && <4.14
                    , aeson
                    , monad-logger
                    , persistent
                    , persistent-template
                    , persistent-sqlite
                    , servant
                    , servant-server
                    , string-conversions
                    , text
                    , transformers
                    , wai
                    , warp

library
  import:             common-options
  hs-source-dirs:     src
  exposed-modules:    App
                    , Api
                    , Models

executable rapt
  import:             common-options
  hs-source-dirs:     src
  main-is:            Main.hs
  build-depends:      rapt
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N

test-suite test
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      rapt
                    , hspec
                    , servant-client
                    , http-client
                    , mockery
